--- a/frontend/styleb.css
+++ b/frontend/styleb.css
@@ -24,10 +24,7 @@ nav li{
     	display:inline;
 }
 #logo{
-    input[type=submit]:hover {
-    background-color: #45a049;
-}
-
+    
     text-align:left;
 }
 #navigation{
@@ -46,47 +43,31 @@ display:inline;
     border-style:solid;
     margin: 0 auto;
     text-align: center;
-}
+    }
    h3{
     text-align:center;
     padding: 30px 0px 5px 50px;
-    color:grey;
     margin: 0 auto;
     }
-.form{
-    margin: 0 auto;
-    display:block;
+    ul{
+   list-style-type: none;
+   display: inline-block;
+   } 
+   
+a:link, a:visited {
+    font-size:20px;
+    padding: 10px 10px;
     text-align: center;
+    text-decoration: none;
+    margin:0 auto;
 }
-form {
+.list{
     display: inline-block;
-    text-align: center;
-    }
-   h4{
-    display: inline-block;
-    padding-right:60px;
-    padding-left: 20px;
-   }
-   input[type=submit]{
-     border-radius: 10px;
 }
 
-p{
-    text-align:left;
-}
-span{
-    margin: 0 auto;
-    padding-right: 40px;
-    padding-left:60px;
-    display:inline-block;
-    }
-select{
-    display: inline-block;
-    border: 2px solid;
-    }
 footer
 {
-	color: white;
+    color: white;
     background-color: #000040;
     position:absolute;
     bottom:0;
