--- a/frontend/css/style_index.css
+++ b/frontend/css/style_index.css
@@ -8,20 +8,22 @@ nav{
 
 .logo{
     padding-bottom:15px;
-   	list-style: none;
-   	font-size:30px;
-   	float:left;
+    list-style: none;
+    font-size:30px;
+    float:left;
 }
-
+h2{
+  text-align: center;
+}
 nav ul{
-   	list-style: none;
+    list-style: none;
     float:right;
 
 }
 
 nav li{
     margin-right: 2px;
-    	display:inline;
+        display:inline;
 }
 #logo{
     
@@ -38,14 +40,13 @@ float:right;
 display:inline;
 }
 
-   h1{
-    text-align:center;
-    margin-left: 350px;
-    margin-right: 350px;
-    margin-top:100px;
-   }
+.process{
+    padding:100px 100px 0px 100px;
+    margin: 0 auto;
+    text-align: center;
+}
 .form{
-    margin-top:25px;
+    margin-top:10px;
     margin-bottom:250px;
     margin-left: 350px;
     padding-left:350px;
@@ -61,7 +62,7 @@ input[type=text],select, input[type=password],select, input[type=submit],select 
 }
 div.sub{
     padding:5px;
-    display:inline;
+    display:block;
 }
 footer
 {
