--- a/Q_hub/templates/base.html
+++ b/Q_hub/templates/base.html
@@ -2,26 +2,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>Sample</title>
-	<link rel="stylesheet" type="text/css" href="{% static "style.css" %}" />
+	{% block title %}{% endblock %}
+	<link rel="stylesheet" type="text/css" href={% static "css/style_index.css" %}>
+	<link rel="stylesheet" type="text/css" href={% static "css/w3.css" %}>
+	<link rel="stylesheet" href={% static "css/base.css" %}>
 </head>
 <body>
-	<header>
-		<nav>
-			<ul class="logo">
-				<li>Student Assessment</li>
-			</ul>
+		<header>
+			<nav>
+				<ul class="logo">
+					<li>Student Assessment</li>
+				</ul>
 
-			<ul class="navigation">
-				<li><a href="#">Contact</a></li>
-				{% block logout %}{% endblock %}
-			</ul>
-		</nav>
-	</header>
-	{% block content %}{% endblock %}
-<footer>
-<div class="sp">
-<p> &copy;Nibble Computer Society</p>
-</footer>
+				<ul class="navigation">
+					<li><a href="/main/">Home</a></li>
+					<li><a href="#">Contact</a></li>
+					{% if user.is_authenticated %}
+					<li><a href="/logout">Log Out</a></li>
+					{% endif %}
+				</ul>
+			</nav>
+		</header>
+		{% block content %}{% endblock %}
+		<footer>
+				<p> &copy;Nibble Computer Society</p>
+		</footer>
 </body>
 </html>
