--- a/Q_hub/templates/index.html
+++ b/Q_hub/templates/index.html
@@ -1,24 +1,19 @@
 {% extends "base.html" %}
-{% block logout %}
-{% if user.is_authenticated %}
-<li><a href="/logout/">LogOut</a></li>
-{% endif %}
+{% block title %}
+<title>Login</title>
 {% endblock %}
 {% block content %}
-<h1>Login</h1>
-<div class="form">
-	<form action="/login/" method="POST">{% csrf_token %}
-	    <!-- <input type="text" name="fname" placeholder="Username"><br>
-	  	<input type="Password" name="pword" placeholder="Password"><br> -->
-	  	<p>{{ form.username }}</p>
-		<p>{{ form.password }}</p>
-	  	<div class="sub">
-	  	<input type="checkbox" name="check">Remember Me <br>
-	  	<input type="submit" value="Submit" />
-	  	</div>
-	</form>
-	{% if flag == 1 %}
-	<p>Username or password is incorrect!</p>
-	{% endif %}
+<div class="process">
+		<h2><b>Login</b></h2>
+		<div class="form">
+				<form action="/main/" method="POST">{% csrf_token %}
+					{{ form.username }}
+					{{ form.password }}
+				  	<div class="sub">
+				  	<input type="submit" value="Submit">
+				  	</div>
+				</form>
+		</div>
 </div>
 {% endblock %}
+
