--- a/Q_hub/templates/step_1.html
+++ b/Q_hub/templates/step_1.html
@@ -8,7 +8,7 @@
 </div>
 <h3><i>Please select the following fields to continue:</i></h3>
 <div class="form">
-<form action="step_2.html" method="POST">{% csrf_token %}
+<form action="/select/" method="POST">{% csrf_token %}
 <div>
 <span>
 {{ form.branch }}
