--- a/Q_hub/templates/all_ques.html
+++ b/Q_hub/templates/all_ques.html
@@ -1,30 +1,17 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-	<title>Sample</title>
-	<link rel="stylesheet" type="text/css" href="css/st_all.css">
-	<link rel="stylesheet" type="text/css" href="css/w3.css">
-</head>
-<body>
-	<header>
-		<nav>
-			<ul class="logo">
-				<li>Student Assessment</li>
-			</ul>
-
-			<ul class="navigation">
-				<li>Home</li>
-				<li>Contact</li>
-				<li>Log Out</li>
-			</ul>
-		</nav>
-	</header>
-	<div class="process">
-	<h2>Showing All Available Questions</h2>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block title %}
+	<title>View Questions -> {{ subject.name }}</title>
+	<link rel="stylesheet" type="text/css" href="css/addNew.css">
+{% endblock %}
+{% block content %}	
+<div class="process">
+<h2>Showing All Available Questions</h2>
+{% if questions %}
+{% for question in questions %}
+<p>{{ question.question }}</p>
+{% endfor %}
+{% endif %}
 </div>
-<footer>
-<p> &copy;Nibble Computer Society</p>
-</footer>
+{% endblock %}
 
-</body>
-</html>
