--- a/Q_hub/templates/home.html
+++ b/Q_hub/templates/home.html
@@ -8,20 +8,15 @@
 {% block content %}
 <div class="process">
 <h2>Step:2</h2>
-<p>{{ user.username }}</p>
-<p>{{ active.subject }}</p>
 <p></p>
-
-<div class="process">
-<h2>Step:2</h2>
-</div>
 <h3><b>What do you want to do?</b></h3>
 <div class="list">
 <ul class="icon">
-<li> <img class="svg-icon" src="assets/exam.svg"> <a href="#">   Create a new Question Paper </a> </li>
-<li> <img class="svg-icon" src="assets/library.svg"> <a href="/add_ques/">  Add a new Question to bank </a> </li>
-<li> <img class="svg-icon" src="assets/open-book.svg"> 	<a href="#">  View all questions in bank</a> </li>
+<li> <img class="svg-icon" src={% static "exam.svg" %}> <a href="#">   Create a new Question Paper </a> </li>
+<li> <img class="svg-icon" src={% static "library.svg" %}> <a href="/add_ques/">  Add a new Question to bank </a> </li>
+<li> <img class="svg-icon" src={% static "open-book.svg" %}> <a href="/view_all/">  View all questions in bank</a> </li>
 </ul>
+</div>
 </div>
 {% endblock %}
 
